[package]
name = "wtransport"
version = "0.1.10"
license = "MIT OR Apache-2.0"
authors = ["Biagio Festa"]
description = "Implementation of the WebTransport (over HTTP3) protocol"
repository = "https://github.com/BiagioFesta/wtransport"
keywords = ["webtransport"]
categories = [ "network-programming", "asynchronous" ]
edition = "2021"
readme = "../README.md"
workspace = ".."
rust-version = "1.70"

[[example]]
name = "client"
required-features = ["dangerous-configuration"]

[[example]]
name = "full"
required-features = ["self-signed"]

[[example]]
name = "server"
required-features = ["self-signed"]

[dependencies]
bytes = "1.4.0"
quinn = "0.10.1"
rcgen = { version = "0.12.0", optional = true }
ring = { version = "0.17.7", optional = true }
rustls = "0.21.1"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
socket2 = "0.5.3"
thiserror = "1.0.40"
time = { version = "0.3.21", optional = true }
tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs"] }
tracing = "0.1.37"
url = "2.4.0"
wtransport-proto = { version = "0.1.10", path = "../wtransport-proto", features = ["async"] }
x509-parser = "0.15.1"

[dev-dependencies]
anyhow = "1.0.71"
axum = "0.7.1"
hyper = "1.0.1"
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["self-signed"]
dangerous-configuration = ["rustls/dangerous_configuration"]
quinn = []
self-signed = ["dep:rcgen", "dep:time", "dep:ring"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bytes::bytes::Bytes",
    "quinn",
    "quinn::recv_stream::ReadError",
    "quinn::recv_stream::RecvStream",
    "quinn::send_stream::SendStream",
    "quinn::send_stream::WriteError",
    "quinn_proto::config::ClientConfig",
    "quinn_proto::config::ServerConfig",
    "quinn_proto::connection::ConnectionError",
    "rustls",
    "rustls::client::client_conn::ClientConfig",
    "rustls::server::server_conn::ServerConfig",
    "tokio::io::async_read::AsyncRead",
    "tokio::io::async_write::AsyncWrite",
    "wtransport_proto::*",
]
