[package]
name = "wtransport"
version = "0.1.14"
license = "MIT OR Apache-2.0"
authors = ["Biagio Festa"]
description = "Implementation of the WebTransport (over HTTP3) protocol"
repository = "https://github.com/BiagioFesta/wtransport"
keywords = ["webtransport"]
categories = [ "network-programming", "asynchronous" ]
edition = "2021"
readme = "../README.md"
workspace = ".."
rust-version = "1.70"

[[example]]
name = "client"
required-features = ["dangerous-configuration"]

[[example]]
name = "full"
required-features = ["self-signed"]

[[example]]
name = "server"
required-features = ["self-signed"]

[[example]]
name = "gencert"
required-features = ["self-signed"]

[dependencies]
bytes = "1.4.0"
pem = "3.0.4"
quinn = "0.10.1"
rcgen = { version = "0.13.1", optional = true }
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.3.1"
sha2 = "0.10.8"
socket2 = "0.5.3"
thiserror = "1.0.40"
time = "0.3.21"
tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "io-util"] }
tracing = "0.1.37"
url = "2.4.0"
wtransport-proto = { version = "0.1.14", path = "../wtransport-proto", features = ["async"] }
x509-parser = "0.16.0"

[dev-dependencies]
anyhow = "1.0.71"
axum = "0.7.1"
hyper = "1.0.1"
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["self-signed"]
dangerous-configuration = []
quinn = []
self-signed = ["dep:rcgen"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bytes::bytes::Bytes",
    "quinn",
    "quinn::recv_stream::ReadError",
    "quinn::recv_stream::RecvStream",
    "quinn::send_stream::SendStream",
    "quinn::send_stream::WriteError",
    "quinn_proto::config::ClientConfig",
    "quinn_proto::config::ServerConfig",
    "quinn_proto::connection::ConnectionError",
    "rustls",
    "rustls::anchors::RootCertStore",
    "rustls::client::client_conn::ClientConfig",
    "rustls::server::server_conn::ServerConfig",
    "rustls::verify::ServerCertVerifier",
    "tokio::io::async_read::AsyncRead",
    "tokio::io::async_write::AsyncWrite",
    "wtransport_proto",
    "wtransport_proto::WEBTRANSPORT_ALPN",
    "wtransport_proto::ids::SessionId",
    "wtransport_proto::ids::StreamId",
    "wtransport_proto::varint::VarInt",
]
